--- a/tools/graphicengine/resources.cfg
+++ b/tools/graphicengine/resources.cfg
@@ -1,17 +1,17 @@
 # Resource locations to be added to the 'boostrap' path
 # This also contains the minimum you need to use the Ogre example framework
 [Bootstrap]
-Zip=../../resources/packs/OgreCore.zip
+Zip=resources/packs/OgreCore.zip
 
 # Resource locations to be added to the default path
 [General]
-FileSystem=../../resources
-FileSystem=../../resources/fonts
-FileSystem=../../resources/materials/programs
-FileSystem=../../resources/materials/scripts
-FileSystem=../../resources/materials/textures
-FileSystem=../../resources/models
-FileSystem=../../resources/overlays
-FileSystem=../../resources/gui
-FileSystem=../../resources/DeferredShadingMedia
+FileSystem=../../trunk/resources
+FileSystem=../../trunk/resources/fonts
+FileSystem=../../trunk/resources/materials/programs
+FileSystem=../../trunk/resources/materials/scripts
+FileSystem=../../trunk/resources/materials/textures
+FileSystem=../../trunk/resources/models
+FileSystem=../../trunk/resources/overlays
+FileSystem=../../trunk/resources/gui
+FileSystem=../../trunk/resources/DeferredShadingMedia
 
