--- a/tools/graphicengine/graphicengine.cbp
+++ b/tools/graphicengine/graphicengine.cbp
@@ -2,12 +2,12 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="ogregui" />
+		<Option title="graphicengine" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="ogregui" prefix_auto="1" extension_auto="1" />
+				<Option output="graphicengine" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj\Debug\" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -22,7 +22,7 @@
 				</Linker>
 			</Target>
 			<Target title="Release">
-				<Option output="ogregui" prefix_auto="1" extension_auto="1" />
+				<Option output="graphicengine" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj\Release\" />
 				<Option type="0" />
 				<Option compiler="gcc" />
