--- a/tools/meshtest/plugins_win.cfg
+++ b/tools/meshtest/plugins_win.cfg
@@ -1,7 +1,7 @@
 # Defines plugins to load
 
 # Define plugin folder
-PluginFolder=..\..\trunk\lib
+PluginFolder=..\..\lib
 
 # Define plugins
 Plugin=RenderSystem_Direct3D9
