- Old Tooltip class removed - First version of the TooltipManager added ( Some functionality still missing, still undocumented ) - Rewrote some parts of ItemWindow to use the new class - Utility class added for CEGUI specific tasks

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -101,7 +101,8 @@ SET(SRCS
   ./src/gui/mainmenu.cpp
   ./src/gui/ogg.cpp
   ./src/gui/charcreate.cpp
-  ./src/gui/tooltip.cpp
+  ./src/gui/ceguiutility.cpp
+  ./src/gui/tooltipmanager.cpp
   ./src/gui/music.cpp
   ./src/gui/controlpanel.cpp
   ./src/gui/inventory.cpp
