created NO_RAKNET build option

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ CMAKE_MINIMUM_REQUIRED( VERSION 2.8.0)
 
 #cmake_policy(SET CMP0011 NEW)
 
-
+OPTION(NO_RAKNET "Avoid use of Raknet Lib" OFF)
 PROJECT(SUMWARS)
 
 # for unknown reasons, sumwars target was always built first, leading to errors
@@ -22,7 +22,11 @@ FIND_PACKAGE(OIS REQUIRED)
 FIND_PACKAGE(CEGUI REQUIRED)
 FIND_PACKAGE(CEGUIOGRE REQUIRED)
 FIND_PACKAGE(OpenAL REQUIRED)
-FIND_PACKAGE(RakNet REQUIRED)
+if(NOT NO_RAKNET)
+	FIND_PACKAGE(RakNet REQUIRED)
+else()
+	set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} -DNO_RAKNET)
+endif()
 FIND_PACKAGE(ALUT REQUIRED)
 FIND_PACKAGE(OggVorbis REQUIRED)
 
@@ -34,7 +38,9 @@ INCLUDE_DIRECTORIES(${CEGUI_INCLUDE_DIRS})
 INCLUDE_DIRECTORIES(${CEGUIOGRE_INCLUDE_DIRS})
 INCLUDE_DIRECTORIES(${OPENAL_INCLUDE_DIR})
 INCLUDE_DIRECTORIES(${ALUT_INCLUDES})
-INCLUDE_DIRECTORIES(${RakNet_INCLUDES})
+if(NOT NO_RAKNET)
+	INCLUDE_DIRECTORIES(${RakNet_INCLUDES})
+endif()
 
 SET(SRCS
   ./src/core/worldobject.cpp
