changes to build systems due to new source files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-CMAKE_MINIMUM_REQUIRED( VERSION 2.8.0)
+CMAKE_MINIMUM_REQUIRED( VERSION 2.6.0)
 
 #cmake_policy(SET CMP0011 NEW)
 
@@ -49,11 +49,11 @@ SET(SRCS
   ./src/core/region.cpp
   ./src/core/objectloader.cpp
   ./src/core/player.cpp
-  ./src/core/network.cpp
   ./src/core/monster.cpp
   ./src/core/itemfactory.cpp
   ./src/core/event.cpp
   ./src/core/charconv.cpp
+  ./src/core/stdstreamconv.cpp
   ./src/core/gameobject.cpp
   ./src/core/projectile.cpp
   ./src/core/treasure.cpp
@@ -75,6 +75,9 @@ SET(SRCS
   ./src/core/action.cpp
   ./src/core/creaturestruct.cpp
   ./src/core/servernetwork.cpp
+  ./src/core/rakservernetwork.cpp
+  ./src/core/rakclientnetwork.cpp
+  ./src/core/raknetworkpacket.cpp
   ./src/core/pathfind.cpp
   ./src/core/damage.cpp
   ./src/core/waypoint.cpp
@@ -82,7 +85,6 @@ SET(SRCS
   ./src/core/debug.cpp
   ./src/core/unionfindtree.cpp
   ./src/core/world.cpp
-  ./src/core/clientnetwork.cpp
   ./src/core/fixedobject.cpp
   ./src/core/templateloader.cpp
   ./src/core/elementattrib.cpp
