--- a/src/sumwars.cbp
+++ b/src/sumwars.cbp
@@ -77,7 +77,6 @@
 		<Unit filename="core\action.h" />
 		<Unit filename="core\charconv.cpp" />
 		<Unit filename="core\charconv.h" />
-		<Unit filename="core\clientnetwork.cpp" />
 		<Unit filename="core\clientnetwork.h" />
 		<Unit filename="core\command.cpp" />
 		<Unit filename="core\command.h" />
@@ -133,7 +132,6 @@
 		<Unit filename="core\monster.h" />
 		<Unit filename="core\monsterbase.h" />
 		<Unit filename="core\netevent.h" />
-		<Unit filename="core\network.cpp" />
 		<Unit filename="core\network.h" />
 		<Unit filename="core\networkstruct.cpp" />
 		<Unit filename="core\networkstruct.h" />
@@ -155,6 +153,12 @@
 		<Unit filename="core\projectile.h" />
 		<Unit filename="core\quest.cpp" />
 		<Unit filename="core\quest.h" />
+		<Unit filename="core\rakclientnetwork.cpp" />
+		<Unit filename="core\rakclientnetwork.h" />
+		<Unit filename="core\raknetworkpacket.cpp" />
+		<Unit filename="core\raknetworkpacket.h" />
+		<Unit filename="core\rakservernetwork.cpp" />
+		<Unit filename="core\rakservernetwork.h" />
 		<Unit filename="core\random.cpp" />
 		<Unit filename="core\random.h" />
 		<Unit filename="core\region.cpp" />
@@ -165,6 +169,8 @@
 		<Unit filename="core\servernetwork.h" />
 		<Unit filename="core\spawnpoint.cpp" />
 		<Unit filename="core\spawnpoint.h" />
+		<Unit filename="core\stdstreamconv.cpp" />
+		<Unit filename="core\stdstreamconv.h" />
 		<Unit filename="core\templateloader.cpp" />
 		<Unit filename="core\templateloader.h" />
 		<Unit filename="core\tiles.h" />
