--- a/Dependencies/Raknet2_0/CMakeLists.txt
+++ b/Dependencies/Raknet2_0/CMakeLists.txt
@@ -38,10 +38,9 @@ SET(RakNet_SRC
 
 SET(RakNet_INCLUDES ${PROJECT_SOURCE_DIR}/Include)
 
-SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR})
+#SET(LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/libs)
 
-#SET(RakNet_LIBRARY ${CMAKE_CURRENT_BINARY_DIR}/libRakNet.a)
-#MESSAGE(${RakNet_LIBRARY})
+#MARK_AS_ADVANCED(${RakNet_INCLUDES})
 
 INCLUDE_DIRECTORIES(${RakNet_INCLUDES})
 
