started work on new translation system: translations of scripttext works, different languages on client and server are supported. Parsingsystem for new XML attributes is not done yet.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,6 +51,7 @@ SET(SRCS
   ./src/core/player.cpp
   ./src/core/monster.cpp
   ./src/core/itemfactory.cpp
+  ./src/core/translatablestring.cpp
   ./src/core/event.cpp
   ./src/core/charconv.cpp
   ./src/core/stdstreamconv.cpp
