further modifications to new translations system: extented translatable strings to object names

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,10 @@ CMAKE_MINIMUM_REQUIRED( VERSION 2.6.0)
 
 #cmake_policy(SET CMP0011 NEW)
 
+IF( NOT CMAKE_BUILD_TYPE )
+SET( CMAKE_BUILD_TYPE "RelWithDebInfo" )
+ENDIF()
+
 OPTION(NO_RAKNET "Avoid use of Raknet Lib" OFF)
 PROJECT(SUMWARS)
 
