--- a/configure.ac
+++ b/configure.ac
@@ -8,7 +8,7 @@ AC_CONFIG_SRCDIR([src/core/pathfind.h])
 AC_CONFIG_HEADERS([config.h])
 
 # Check packages (DEPS_CFLAGS and DEPS_LIBS for Makefile.am)
-PKG_CHECK_MODULES([DEPS], [OGRE >= 1.4.0 OIS CEGUI CEGUI-OGRE RakNet freealut openal vorbisfile])
+PKG_CHECK_MODULES([DEPS], [OGRE >= 1.4.0 OIS CEGUI CEGUI-OGRE enet freealut openal vorbisfile])
 AC_SUBST(DEPS_CFLAGS)
 AC_SUBST(DEPS_LIBS)
 
@@ -23,11 +23,11 @@ PKG_CHECK_MODULES([LUA], [lua],,
 AC_SUBST(LUA_CFLAGS)
 AC_SUBST(LUA_LIBS)
 
-
 # Checks for programs.
 AC_PROG_CXX
 AC_PROG_CC
 AC_PROG_CPP
+AM_PROG_CC_C_O
 
 # Checks for libraries.
 # FIXME: Replace `main' with a function in `-lm':
