--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,6 +44,7 @@ INCLUDE_DIRECTORIES(${CEGUI_INCLUDE_DIRS})
 INCLUDE_DIRECTORIES(${CEGUIOGRE_INCLUDE_DIRS})
 INCLUDE_DIRECTORIES(${OPENAL_INCLUDE_DIR})
 INCLUDE_DIRECTORIES(${ALUT_INCLUDES})
+INCLUDE_DIRECTORIES(${ENET_INCLUDES})
 #if(NOT NO_RAKNET)
 #	INCLUDE_DIRECTORIES(${RakNet_INCLUDES})
 #endif()
