added pthread to cmake system

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,7 @@ FIND_PACKAGE(CEGUI REQUIRED)
 FIND_PACKAGE(CEGUIOGRE REQUIRED)
 FIND_PACKAGE(OpenAL REQUIRED)
 FIND_PACKAGE(Enet REQUIRED)
+FIND_PACKAGE(Pthreads REQUIRED)
 #if(NOT NO_RAKNET)
 #	FIND_PACKAGE(RakNet REQUIRED)
 #else()
@@ -45,6 +46,8 @@ INCLUDE_DIRECTORIES(${CEGUIOGRE_INCLUDE_DIRS})
 INCLUDE_DIRECTORIES(${OPENAL_INCLUDE_DIR})
 INCLUDE_DIRECTORIES(${ALUT_INCLUDES})
 INCLUDE_DIRECTORIES(${ENET_INCLUDES})
+INCLUDE_DIRECTORIES(${PTHREADS_INCLUDE_DIR})
+
 #if(NOT NO_RAKNET)
 #	INCLUDE_DIRECTORIES(${RakNet_INCLUDES})
 #endif()
@@ -142,4 +145,4 @@ SET(SRCS
 )
 
 ADD_EXECUTABLE(sumwars ${SRCS})
-TARGET_LINK_LIBRARIES(sumwars ${OGRE_LIBRARIES} ${OIS_LIBRARY_DBG} ${CEGUI_LIBRARIES} ${CEGUIOGRE_LIBRARIES} ${LUA_LIBRARIES} ${OPENAL_LIBRARY} ${ALUT_LIBRARY} ${Enet_LIBRARY} ${OGGVORBIS_LIBRARIES})
+TARGET_LINK_LIBRARIES(sumwars ${OGRE_LIBRARIES} ${OIS_LIBRARY_DBG} ${CEGUI_LIBRARIES} ${CEGUIOGRE_LIBRARIES} ${LUA_LIBRARIES} ${OPENAL_LIBRARY} ${ALUT_LIBRARY} ${Enet_LIBRARY} ${PTHREADS_LIBRARY} ${OGGVORBIS_LIBRARIES})
