--- a/resources.cfg
+++ b/resources.cfg
@@ -1,80 +1,72 @@
 [General]
-FileSystem=/resources/models
-FileSystem=/resources/materials/scripts
-FileSystem=/resources/materials/programs
-FileSystem=/resources/materials/textures
-FileSystem=/resources/particle/ogre_1_6
+FileSystem=./resources/models
+FileSystem=./resources/materials/scripts
+FileSystem=./resources/materials/programs
+FileSystem=./resources/materials/textures
+FileSystem=./resources/particle/ogre_1_6
 
 [GUI]
-FileSystem=/resources/gui/configs
-FileSystem=/resources/gui/fonts
-FileSystem=/resources/gui/imagesets
-FileSystem=/resources/gui/layouts
-FileSystem=/resources/gui/looknfeel
-FileSystem=/resources/gui/schemes
+FileSystem=./resources/gui/configs
+FileSystem=./resources/gui/fonts
+FileSystem=./resources/gui/imagesets
+FileSystem=./resources/gui/layouts
+FileSystem=./resources/gui/looknfeel
+FileSystem=./resources/gui/schemes
 
 [emotionsets]
-FileSystem=/resources/emotionsets
+FileSystem=./resources/emotionsets
 
 
 [itempictures]
-FileSystem=/resources/itempictures
+FileSystem=./resources/itempictures
 
 [sound]
-FileSystem=/resources/sound
+FileSystem=./resources/sound
 
 [music]
-FileSystem=/resources/music
+FileSystem=./resources/music
 
 [world]
-FileSystem=/data/world
+FileSystem=./data/world
 
 [npc]
-FileSystem=/data/npc
+FileSystem=./data/npc
 
 [quests]
-FileSystem=/data/quests
+FileSystem=./data/quests
 
 [items]
-FileSystem=/data/items
+FileSystem=./data/items
 
 [abilities]
-FileSystem=/data/abilities
+FileSystem=./data/abilities
 
 [monsters]
-FileSystem=/data/monsters
+FileSystem=./data/monsters
 
 [playerclasses]
-FileSystem=/data/playerclasses
+FileSystem=./data/playerclasses
 
 [projectiles]
-FileSystem=/data/projectiles
+FileSystem=./data/projectiles
 
 [objects]
-FileSystem=/data/objects
+FileSystem=./data/objects
 
 [object_groups]
-FileSystem=/data/object_groups
+FileSystem=./data/object_groups
 
 [obj_templates]
-FileSystem=/data/obj_templates
+FileSystem=./data/obj_templates
 
 [renderinfo]
-FileSystem=/data/renderinfo
+FileSystem=./data/renderinfo
 
 [lua]
-FileSystem=/data/lua
+FileSystem=./data/lua
 
 [sounddata]
-FileSystem=/data/sounddata
-
-
-
-
-
-
-
-
+FileSystem=./data/sounddata
 
 
 
