First attempt to install the project system-wide

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -146,3 +146,15 @@ SET(SRCS
 
 ADD_EXECUTABLE(sumwars ${SRCS})
 TARGET_LINK_LIBRARIES(sumwars ${OGRE_LIBRARIES} ${OIS_LIBRARY_DBG} ${CEGUI_LIBRARIES} ${CEGUIOGRE_LIBRARIES} ${LUA_LIBRARIES} ${OPENAL_LIBRARY} ${ALUT_LIBRARY} ${Enet_LIBRARY} ${PTHREADS_LIBRARY} ${OGGVORBIS_LIBRARIES})
+
+INSTALL(TARGETS sumwars
+        RUNTIME DESTINATION bin
+        LIBRARY DESTINATION lib
+        ARCHIVE DESTINATION lib)
+
+FILE(GLOB_RECURSE DATA_FILES "${CMAKE_CURRENT_SOURCE_DIR}/data/" "*.*" EXCLUDE ".svn")
+FILE(GLOB_RECURSE RESOURCE_FILES "${CMAKE_CURRENT_SOURCE_DIR}/resources/" "*.*" EXCLUDE ".svn")
+
+INSTALL(FILES ${DATA_FILES} DESTINATION share/sumwars/data)
+INSTALL(FILES ${RESOURCE_FILES} DESTINATION share/sumwars/resources)
+INSTALL(FILES ogre.cfg plugins.cfg DESTINATION share/sumwars/)
