Fixing file gobbling

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -159,8 +159,8 @@ INSTALL(TARGETS sumwars
         LIBRARY DESTINATION lib
         ARCHIVE DESTINATION lib)
 
-FILE(GLOB_RECURSE DATA_FILES "${CMAKE_CURRENT_SOURCE_DIR}/data/" "*.*" EXCLUDE ".svn")
-FILE(GLOB_RECURSE RESOURCE_FILES "${CMAKE_CURRENT_SOURCE_DIR}/resources/" "*.*" EXCLUDE ".svn")
+FILE(GLOB_RECURSE DATA_FILES "${CMAKE_CURRENT_SOURCE_DIR}/data/*.*" EXCLUDE ".svn")
+FILE(GLOB_RECURSE RESOURCE_FILES "${CMAKE_CURRENT_SOURCE_DIR}/resources/*.*" EXCLUDE ".svn")
 
 INSTALL(FILES ${DATA_FILES} DESTINATION share/sumwars/data)
 INSTALL(FILES ${RESOURCE_FILES} DESTINATION share/sumwars/resources)
