Installing directories properly

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -151,17 +151,20 @@ SET(SRCS
   ./src/gui/optionswindow.cpp
 )
 
+set(DATA_DIR "${CMAKE_CURRENT_SOURCE_DIR}/data/")
+set(RESOURCES_DIR "${CMAKE_CURRENT_SOURCE_DIR}/resources/")
+
 ADD_EXECUTABLE(sumwars ${SRCS} ${SRCS_NLFG} ${SRCS_TINYXML})
 TARGET_LINK_LIBRARIES(sumwars ${OGRE_LIBRARIES} ${OIS_LIBRARY_DBG} ${CEGUI_LIBRARIES} ${CEGUIOGRE_LIBRARIES} ${LUA_LIBRARIES} ${OPENAL_LIBRARY} ${ALUT_LIBRARY} ${Enet_LIBRARY} ${PTHREADS_LIBRARY} ${OGGVORBIS_LIBRARIES})
 
-INSTALL(TARGETS sumwars
+install(DIRECTORY ${DATA_DIR}
+  DESTINATION "share/sumwars/data")
+install(DIRECTORY ${RESOURCES_DIR}
+  DESTINATION "share/sumwars/resources")
+install(FILES ogre.cfg plugins.cfg
+  DESTINATION "share/sumwars")
+
+install(TARGETS sumwars
         RUNTIME DESTINATION bin
         LIBRARY DESTINATION lib
         ARCHIVE DESTINATION lib)
-
-FILE(GLOB_RECURSE DATA_FILES "${CMAKE_CURRENT_SOURCE_DIR}/data/*.*" EXCLUDE ".svn")
-FILE(GLOB_RECURSE RESOURCE_FILES "${CMAKE_CURRENT_SOURCE_DIR}/resources/*.*" EXCLUDE ".svn")
-
-INSTALL(FILES ${DATA_FILES} DESTINATION share/sumwars/data)
-INSTALL(FILES ${RESOURCE_FILES} DESTINATION share/sumwars/resources)
-INSTALL(FILES ogre.cfg plugins.cfg DESTINATION share/sumwars/)
