install instructions updated, (ubuntu section).

--- a/ogre.cfg
+++ b/ogre.cfg
@@ -1,7 +1,10 @@
 Render System=OpenGL Rendering Subsystem
 
 [OpenGL Rendering Subsystem]
-FSAA=0
+Display Frequency=50 MHz
+FSAA=4
 Full Screen=No
 RTT Preferred Mode=PBuffer
-Video Mode=940 x 705
+VSync=No
+Video Mode=1440 x  900
+sRGB Gamma Conversion=No
