--- a/plugins_mac.cfg
+++ b/plugins_mac.cfg
@@ -1,6 +1,6 @@
 # Define D3D rendering implementation plugin
-Plugin=RenderSystem_GL.bundle
-Plugin=Plugin_ParticleFX.bundle
-Plugin=Plugin_BSPSceneManager.bundle
-Plugin=Plugin_OctreeSceneManager.bundle
+Plugin=RenderSystem_GL
+Plugin=Plugin_ParticleFX
+Plugin=Plugin_BSPSceneManager
+Plugin=Plugin_OctreeSceneManager
 
